--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
-  padding: 0;
+  font-family: sans-serif;
 }
 a {
   color: blue;
+  margin: 0 10px;
   text-decoration: none;
+}
+button {
+  cursor: pointer;
 }
